--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,22 @@
 .h1--gral {
     padding: 15px;
     text-align: center;
+    color: #262927;
+    font-weight: bolder;
 }
 
 .h2--gral {
     padding: 10px;
     text-align: center;
+    font-weight: bolder;
+    color: #12344A;
 }
 
 .main--nuevo-clte {
     display: flex;
     margin-left: 5vh;
     margin-right: 5vh;
+    margin-top: 2vh;
     flex-direction: column;
     align-items: left;
 }
